adding error prone and fixing warnings, especially closing file streams (#342)